<resources>
    <string name="app_name">Day3</string>

    <string name="settings">Настройки</string>
    <string name="countButton">еще одна ворона</string>

    <string name="wifi_title">Wi-Fi</string>
    <string name="wifi_summary">Вкл. или выкл. сеть WiFi</string>
    <string name="hints_title">Подсказки</string>
    <string name="hints_summary">Показывать подсказки</string>

    <string name="pref_size">pref_size</string>
    <string name="size_title">Размер шрифта</string>
    <string name="size_summary">Устанавливает новый размер шрифта</string>
    <string name="size_default">14</string>
    <string name="size_dialog_title">Введите размер шрифта (от 10 до 32)</string>


    <string name="pref_style">pref_style</string>
    <string name="style_title">Стиль для шрифта</string>
    <string name="style_summary">Устанавливает стиль для шрифта</string>
    <string name="style_default">1</string>
    <string name="style_dialog_title">Выберите стиль для шрифта</string>


</resources>
