<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="Разное">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="wifi"
            android:summary="@string/wifi_summary"
            android:title="@string/wifi_title"/>
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="hints"
            android:summary="@string/hints_summary"
            android:title="@string/hints_title"/>
        <SwitchPreference
            android:key="glad"
            android:summaryOff="Вы уверены, что не будете гладить кота?"
            android:summaryOn="Гладить кота?"
            android:switchTextOff="Нет"
            android:switchTextOn="Да"/>

        <RingtonePreference
            android:key="setting_ringtone"
            android:showDefault="true"
            android:showSilent="true"
            android:summary="Устанавливает мелодию для звонка (вкл. или выкл.)"
            android:title="Рингтон"/>
        <PreferenceScreen
            android:summary="Импортированная системная настройка"
            android:title="Настройка через намерение" >
            <intent android:action="android.settings.AIRPLANE_MODE_SETTINGS" />
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="Настройки шрифта"
        android:dependency="glad">
        <EditTextPreference
            android:defaultValue="@string/size_default"
            android:dialogTitle="@string/size_dialog_title"
            android:key="@string/pref_size"
            android:summary="@string/size_summary"
            android:title="@string/size_title"/>
        <ListPreference
            android:defaultValue="@string/style_default"
            android:dialogTitle="@string/style_dialog_title"
            android:entries="@array/text_style"
            android:entryValues="@array/text_style"
            android:key="@string/pref_style"
            android:summary="@string/style_summary"
            android:title="@string/style_title"/>

        <PreferenceScreen
            android:key="pref_color"
            android:title="Цвет текста"
            android:summary="Устанавливает цвет для текста">

            <CheckBoxPreference
                android:key="pref_color_black"
                android:title="Черный"
                android:defaultValue="true"
                android:summary="Устанавливает черный цвет" />
            <CheckBoxPreference
                android:key="pref_color_red"
                android:title="Красный"
                android:summary="Устанавливает красный цвет" />
            <CheckBoxPreference
                android:key="pref_color_green"
                android:title="Зеленый"
                android:summary="Устанавливает зеленый цвет" />
            <CheckBoxPreference
                android:key="pref_color_blue"
                android:title="Синий"
                android:summary="Устанавливает синий цвет" />
        </PreferenceScreen>


    </PreferenceCategory>
</PreferenceScreen>